--- a/natours/sass/form.scss
+++ b/natours/sass/form.scss
@@ -14,6 +14,8 @@
     display: block;
     transition: all 0.3s;
 
+    @include respond(phone) { width: 100%; }
+
     &::-webkit-input-placeholder { color: $cloud; }
 
     &:focus {
@@ -43,6 +45,11 @@
   &__radio-group {
     width: 49%;
     display: inline-block;
+
+    @include respond(phone) {
+      width: 100%;
+      margin-bottom: 2rem;
+    }
   }
 
   &__radio-label {
