--- a/natours/sass/home.scss
+++ b/natours/sass/home.scss
@@ -46,7 +46,11 @@
   padding: 15rem 0;
   background-image: linear-gradient(to right bottom, $light, $dark);
 
-  @include respond(tablet) { padding: 10rem 0; }
+  @include respond(tablet) {
+    padding: 10rem 0;
+
+    .row { max-width: none; }
+  }
 }
 
 .book {
@@ -58,10 +62,24 @@
   background-size: 100%;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($black, 0.15);
-  height: 50rem;
+
+  @include respond(tablet) {
+    background-image: linear-gradient(105deg,
+      rgba($white, 0.9) 0%,
+      rgba($white, 0.9) 65%,
+      transparent 65%),
+    url(../img/nat-10.jpg);
+    background-size: cover;
+  }
+
+  @include respond(phone) { background-image: linear-gradient(to right, rgba($white, 0.9) 0%, rgba($white, 0.9) 100%), url(../img/nat-10.jpg); }
 
   &__form {
     width: 50%;
     padding: 6rem;
+
+    @include respond(tablet) { width: 65%; }
+
+    @include respond(phone) { width: 100%; }
   }
 }
