--- a/natours/sass/story.scss
+++ b/natours/sass/story.scss
@@ -9,7 +9,13 @@
   font-size: $defs-font;
   transform: skewX(-12deg);
 
-  & > * { transform: skewX(12deg); }
+  @include respond(tablet) {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 7rem; 
+  }
+
+  @include respond(phone) { transform: skewX(0); }
 
   &__shape {
     width: 15rem;
@@ -19,6 +25,8 @@
     clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
     position: relative;
+
+    @include respond(phone) { transform: translateX(-3rem) skewX(0); }
   }
 
   &__img {
@@ -28,7 +36,11 @@
     transition: all 0.5s;
   }
 
-  &__text { transform: skewX(12deg); }
+  &__text {
+    transform: skewX(12deg);
+
+    @include respond(phone) { transform: skewX(0); }
+  }
 
   &__caption {
     @include abcenter;
