--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -571,11 +571,17 @@ body {
   .popup__left {
     display: table-cell;
     width: 33.3%; }
+    @media (max-width: 37.5em) {
+      .popup__left {
+        display: none; } }
   .popup__right {
     display: table-cell;
     width: 66.6%;
     vertical-align: middle;
     padding: 3rem 5rem; }
+    @media (max-width: 37.5em) {
+      .popup__right {
+        text-align: center; } }
   .popup__img {
     display: block;
     width: 100%; }
@@ -584,6 +590,9 @@ body {
     column-count: 2;
     column-gap: 4rem;
     column-rule: 1px solid #eee; }
+    @media (max-width: 37.5em) {
+      .popup__text {
+        column-count: 1; } }
   .popup:target {
     opacity: 1;
     visibility: visible; }
