--- a/natours/sass/popup.scss
+++ b/natours/sass/popup.scss
@@ -27,6 +27,8 @@
   &__left {
     display: table-cell;
     width: 33.3%;
+
+    @include respond(phone) { display: none; }
   }
 
   &__right {
@@ -34,6 +36,8 @@
     width: 66.6%;
     vertical-align: middle;
     padding: 3rem 5rem;
+
+    @include respond(phone) { text-align: center; }
   }
 
   &__img {
@@ -46,6 +50,8 @@
     column-count: 2;
     column-gap: 4rem;
     column-rule: 1px solid $grey-dark;
+
+    @include respond(phone) { column-count: 1; }
   }
 
   &:target {
