--- a/natours/sass/header.scss
+++ b/natours/sass/header.scss
@@ -14,9 +14,8 @@
 
   @include respond(phone) { clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); }
 
-  @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 120em) {
-    background-image: linear-gradient(to right bottom, rgba($light, 0.8), rgba($dark, 0.8)), url(../img/hero.jpg);
-  }
+  @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+    only screen and (min-width: 120em) { background-image: linear-gradient(to right bottom, rgba($light, 0.8), rgba($dark, 0.8)), url(../img/hero.jpg); }
 
   &__logo-box {
     position: absolute;
