--- a/natours/sass/mixins.scss
+++ b/natours/sass/mixins.scss
@@ -15,14 +15,14 @@
 
 @mixin respond($breakpoint) {
   @if $breakpoint == phone {
-    @media (max-width: 37.5em) { @content };
+    @media only screen and (max-width: 37.5em) { @content };
   }
 
   @if $breakpoint == tablet {
-    @media (max-width: 56.25em) { @content };
+    @media only screen and (max-width: 56.25em) { @content };
   }
 
   @if $breakpoint == desktop {
-    @media (min-width: 100em) { @content };
+    @media only screen and (min-width: 100em) { @content };
   }
 }
