--- a/mma.cc.ua/css/style.css
+++ b/mma.cc.ua/css/style.css
@@ -43,7 +43,7 @@ a {
 }
 
 .container:not(:last-child) {
-  margin-bottom: 12rem;
+  margin-bottom: 6.4rem;
 }
 
 .container:nth-child(1) {
@@ -141,5 +141,6 @@ a {
 @media screen and (max-width: 768px) {
   .grid {
     grid-template-columns: 1fr;
+    grid-row-gap: 0;
   }
 }
