--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -33,7 +33,8 @@ a {
   text-decoration: none;
 }
 
-ul {
+ul,
+ol {
   list-style-type: none;
 }
 
@@ -141,12 +142,21 @@ a:hover {
 
 .quote {
   font-size: 2rem;
-  margin-bottom: 3.2rem;
+  margin-bottom: 2.2rem;
 }
 
 .list {
   font-size: 1.6rem;
   line-height: 1.6;
+}
+
+.list dt {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+dl.list {
+  margin-bottom: 2.8rem;
 }
 
 .grid {
@@ -181,14 +191,6 @@ a:hover {
 
 .linked {
   background-color: var(--c-glass);
-}
-
-.inst {
-  background-color: var(--c-primary);
-}
-
-.email {
-  background-color: var(--c-secondary);
 }
 
 .btn:not(:last-child) {
